# jenkins-mcp-server

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
examples/: .env.example  cursor_mcp_admin.json  cursor_mcp_config.json  cursor_mcp_config_env.json  cursor_mcp_readonly.json  example_usage.py
src/jenkins_mcp_server/: __init__.py  cli.py  client.py  server.py
tests/: __init__.py  test_client.py  test_server.py
